mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_missing_if_expr.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Expected '{' after else
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_missing_if_expr.mux:2:13
   |
 2 | if true { } else
   |             ^^^^
